# summer-renderer-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLAD.cmake  FindOptiX.cmake  FindTinyGLTF.cmake  find-config-CUDA.cmake  find-config-GLAD.cmake  find-config-GLFW3.cmake  find-config-GLM.cmake  find-config-OpenGL.cmake  find-config-OptiX.cmake  find-config-TinyGLTF.cmake  find-config-threads.cmake  helper-functions.cmake
summer-libbase/: CMakeLists.txt  include.hpp  stdafx.hpp
summer-libcuda/: CMakeLists.txt  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  include.hpp  pixel-buffer-object.cpp  pixel-buffer-object.hpp  pointer.hpp
summer-libopengl/: CMakeLists.txt  include.hpp  program.cpp  program.hpp
summer-liboptix/: CMakeLists.txt  acceleration-structure.cpp  acceleration-structure.hpp  compiled-module.cpp  compiled-module.hpp  context.cpp  context.hpp  include.hpp  pipeline.cpp  pipeline.hpp  program-set.cpp  program-set.hpp  shader-binding-table.cpp  shader-binding-table.hpp  stdafx.hpp
summer-librender/: CMakeLists.txt  include.hpp  render-settings.hpp  renderer.cpp  renderer.hpp  rng.hpp  stdafx.hpp
summer-librender/kernels/: compile-all-kernels.cu  generic-forward.cu  helpers.cuh  helpers.hpp  integrate-ambientocclusion.cu  integrate-lightnone.cu  integrate-pathtrace.cu  main.cu  miss-color.cu  raygen-forward.cu  render-albedo.cu  render-normals.cu  render-pathtrace.cu  render-texcs.cu  render-tri-bary.cu  sbt-entries.cpp  sbt-entries.hpp  shading.cuh  stdafx.cuh  stdafx.hpp
summer-librender/scene/: camera.cu  camera.hpp  datablock.cpp  datablock.hpp  framebuffer.cpp  framebuffer.hpp  gltf.cpp  gltf.hpp  object.cpp  object.hpp  scenegraph.cpp  scenegraph.hpp  texture.cpp  texture.hpp
summer-librender/scene/materials/: image.cpp  image.hpp  material.cpp  material.cu  material.hpp  sampler.cpp  sampler.hpp  texture.cpp  texture.hpp
summer-libutil/: CMakeLists.txt  frame.hpp  include.hpp  math.hpp  random.hpp  stdafx.hpp  string.cpp  string.hpp
summer-libutil/math/: color.cpp  color.hpp
summer-standalone/: CMakeLists.txt  main.cpp  stdafx.hpp
